# pgdam

./: .gitignore  AGENTS.md  LICENSE  README.md
.cargo-cache/cache/index.crates.io-1949cf8c6b5b557f/: aya-0.12.0.crate  aya-build-0.1.3.crate  aya-ebpf-macros-0.1.2.crate  aya-log-common-0.1.15.crate  aya-obj-0.1.0.crate  aya-obj-0.2.1.crate  bindgen-0.66.1.crate  cc-1.2.60.crate  derive_more-0.99.20.crate  fastrand-2.4.1.crate  fixedbitset-0.5.7.crate  futures-channel-0.3.32.crate  futures-core-0.3.32.crate  futures-sink-0.3.32.crate  futures-task-0.3.32.crate  futures-util-0.3.32.crate  h2-0.3.27.crate  hashbrown-0.17.0.crate  icu_collections-2.2.0.crate  icu_locale_core-2.2.0.crate  icu_normalizer-2.2.0.crate  icu_normalizer_data-2.2.0.crate  icu_properties-2.2.0.crate  (+38 more)
agent/: Cargo.toml  Dockerfile.agent  Dockerfile.builder  README.md  agent_ebpf.md  build.sh  offset_calc.c
agent/dev_certs/: root.crt  root.key  root.srl  server.crt  server.csr  server.key
agent/pgdam-agent/: Cargo.toml
agent/pgdam-agent/src/: main.rs  metrics.rs
agent/pgdam-common/: Cargo.toml
agent/pgdam-ebpf/: Cargo.toml
contracts/: audit_event.proto
dashboard/: AGENTS.md
deploy/: AGENTS.md  configs.yaml  daemonset-multi-sink.yaml  daemonset.yaml  elastic.yaml  kafka-minimal.yaml  kafka-sasl-minimal.yaml  kind-cluster.yaml  namespace.yaml  pgdam-config.yaml  postgres-dev.yaml  postgres-tls.yaml  rbac.yaml
docs/: architecture.drawio
policy-engine/: AGENTS.md  kill.rego  kill_test.rego  mask.rego  mask_test.rego
processor/: AGENTS.md  Cargo.toml  Dockerfile.processor  README.md  build.rs  build.sh
processor/src/: config.rs  kill.rs  lib.rs  main.rs  metrics.rs  normalize.rs  opa.rs  session.rs  sink.rs
processor/src/enrichment/: bare_metal.rs  container.rs  k8s.rs  mod.rs
processor/src/sink/: elasticsearch.rs  kafka.rs  mod.rs  stdout.rs
processor/tests/: config_test.rs  container_test.rs  kill_test.rs  normalize_test.rs  session_test.rs
tests/: AGENTS.md
tests/baselines/: initial.json
tests/e2e/: requirements.txt  test_pgdam.py
(+148 files in other folders)
