[package]
name = "pgdam-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
pg_query = "6.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
prost = "0.12"
prost-types = "0.12"
kube = { version = "0.88", features = ["runtime", "client"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
hostname = "0.4.2"

[build-dependencies]
prost-build = "0.12"
