[package]
name = "pgdam-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
pg_query = "6.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
prost = "0.12"
prost-types = "0.12"
kube = { version = "0.88", features = ["runtime", "client"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
hostname = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "sasl"] }
prometheus = "0.13"
lazy_static = "1.4"
axum = "0.7"
libc = "0.2"
once_cell = "1.21.4"
futures = "0.3.32"

[build-dependencies]
prost-build = "0.12"
