[package]
name = "pgdam-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
pgdam-common = { path = "../pgdam-common", features = ["userspace"] }
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
object = "0.32"

[[bin]]
name = "pgdam-agent"
path = "src/main.rs"
